Revision history for DBIx-Class-Migration

0.027  TBA
        - Allow you to specify a migration class in the Catalyst DBIC Model
          Trait.  This will allow you to make direct use of any custom
          subclasses of DBIx::Class::Migration you may have written.

0.026  02 August 2012
        - Fixed typo in documentation (chromatic++)
        - added repository and other metadata to the distribution.
        - increased the minimum require version of MX:GetOpt to hopefully solve
          reported problems with older versions.
        - If you get the very common "Can't find source for..." error in your
          migration script, we now give you more details and debugging.
        - Started to create some custom subtypes so we can better control the
          error messages you get when making common mistakes at the commandline.

0.025  05 July 2012
        - Updated docs a bit to disambiguate the command 'version' and 'status'
        - you can now run the help command on your custom subclasses of
          DBIx::Class::Migration.

0.024  05 June 2012
        - Fixed method 'install_version_storage' to actually do what the
          documentation claims.  Added test case (++bentglasstube).

0.023  03 May 2012
        - Look harder for a sharedir

0.022  11 April 2012
        - Fixed broken POD in last release.  No functional changes

0.021  11 April 2012
        - Documentation and debug output fixes (RsrchBoy++)
        - fixed regression when using DBIC:DeploymentHandler v0.002112+
          (lxp@cpan.org++)
        - New Feature: We set  %ENV variables for key settings so that
          information is passed to install / up-downgrade scripts.

0.020  28 March 2012
        - fixed typo that caused new command added in 0.018 to fail (nour.sharabash++)
        - documentation typo fixes (logie17++)

0.019  16 March 2012
        - Fixed broken POD in the third part of the tutorial that prevented
          the page from being rendered.