@@ -4,6 +4,7 @@ Revision history for DBIx-Class-Migration
         - Allow you to specify a migration class in the Catalyst DBIC Model
           Trait.  This will allow you to make direct use of any custom
           subclasses of DBIx::Class::Migration you may have written.
+        - Lots of improvements to the commandline documentation.
 
 0.026  02 August 2012
         - Fixed typo in documentation (chromatic++)
